--- a/Desktop/ChocoPami/package.json
+++ b/Desktop/ChocoPami/package.json
@@ -2,7 +2,7 @@
   "name": "chocopami",
   "version": "1.0.0",
   "description": "site pams",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
